<resources>
    <string name="app_name">WeatherApp</string>

    <string name="launch_activity">Launch activity</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>
    <string name="preference_file_key">com.avtograv.weatherapp.while_in_use_location.PREFERENCE_FILE_KEY</string>
    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="ok">OK</string>

    <string name="description_add">Add item to groceries list</string>
    <string name="hint_search_query">Enter location</string>
    <string name="more_details"><![CDATA[More details >]]></string>
    <string name="text_today">Today -</string>
    <string name="text_tomorrow">Tomorrow -</string>
    <string name="text_after_tomorrow">Tuesday -</string>
    <string name="ic_weather">ic_weather</string>
    <string name="slash">/</string>
    <string name="ic_arrow_back">ic arrow back</string>
    <string name="manage_cities">Manage cities</string>

    <string name="error_network_failed">Check your network connection!</string>
    <string name="fine_location_access_rationale_title_text">
        Welcome to the Background Location Sample!</string>

    <string name="fine_location_access_rationale_details_text">
        This sample allows you to receive location updates while using the app.
        \n\n
        In order for this feature to work, please approve access to your location via the button below.
    </string>

    <string name="enable_fine_location_button_text">Approve Location Access</string>

    <string name="fine_location_permission_rationale">The fine location permission is needed for core functionality.</string>
    <string name="fine_permission_denied_explanation">Fine location permission was denied, but is needed for core functionality.</string>

    <string name="background_location_permission_rationale">The background location permission is needed for enhanced functionality.</string>
    <string name="background_permission_denied_explanation">Background location permission was denied but needed for enhanced functionality.</string>

</resources>