<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_weather_fragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_top_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/space_normal"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_normal"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/space_normal"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_normal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="@dimen/space_normal" />

    <ImageView
        android:id="@+id/iv_arrow_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_medium"
        android:layout_marginTop="@dimen/space_big"
        android:contentDescription="@string/ic_arrow_back"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toTopOf="@+id/gl_top_top"
        app:srcCompat="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/tv_manage_cities"
        style="@style/item_specificity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_normal"
        android:text="@string/manage_cities"
        android:textSize="@dimen/text_medium"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toBottomOf="@+id/iv_arrow_left" />

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/SearchStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_normal"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/gl_right"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_manage_cities">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_search_query">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_new_loc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_big"
                android:fontFamily="sans-serif"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_found_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/item_specificity"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:text="Toronto" />

</androidx.constraintlayout.widget.ConstraintLayout>