<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/space_normal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/space_normal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/space_normal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="130dp" />

    <LinearLayout
        android:id="@+id/ll_weather_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/gl_top">

        <ImageView
            android:id="@+id/img_v_weather_today"
            style="@style/item_specificity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_small"
            android:layout_marginTop="@dimen/space_small"
            android:contentDescription="@string/ic_weather"
            android:src="@drawable/ic_two_tone_cloud_24" />

        <TextView
            android:id="@+id/tv_text_today"
            style="@style/item_specificity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_today" />

        <TextView
            android:id="@+id/tv_about_weather_today"
            style="@style/item_specificity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            tools:text="Clear" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_temp_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/gl_middle"
        app:layout_constraintTop_toBottomOf="@+id/gl_top">

        <TextView
            android:id="@+id/rv_today_temp_max"
            style="@style/item_specificity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="-9" />

        <TextView
            android:id="@+id/rv_slash"
            style="@style/item_specificity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash" />

        <TextView
            android:id="@+id/rv_today_temp_min"
            style="@style/item_specificity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="-21" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_weather_tomorrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/ll_weather_today">

        <ImageView
            android:id="@+id/img_v_weather_tomorrow"
            style="@style/item_specificity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_small"
            android:layout_marginTop="@dimen/space_small"
            android:contentDescription="@string/ic_weather"
            android:src="@drawable/ic_two_tone_cloud_24" />

        <TextView
            android:id="@+id/tv_text_tomorrow"
            style="@style/item_specificity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tomorrow" />

        <TextView
            android:id="@+id/tv_about_weather_tomorrow"
            style="@style/item_specificity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            tools:text="Clear" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_temp_tomorrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/gl_middle"
        app:layout_constraintTop_toBottomOf="@+id/ll_weather_today">

        <TextView
            android:id="@+id/rv_tomorrow_temp_max"
            style="@style/item_specificity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="-9" />

        <TextView
            android:id="@+id/rv_slash_2"
            style="@style/item_specificity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash" />

        <TextView
            android:id="@+id/rv_tomorrow_temp_min"
            style="@style/item_specificity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="-21" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_weather_after_tomorrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/ll_weather_tomorrow">

        <ImageView
            android:id="@+id/img_v_weather_after_tomorrow"
            style="@style/item_specificity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_small"
            android:layout_marginTop="@dimen/space_small"
            android:contentDescription="@string/ic_weather"
            android:src="@drawable/ic_two_tone_cloud_24" />

        <TextView
            android:id="@+id/tv_text_after_tomorrow"
            style="@style/item_specificity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_after_tomorrow" />

        <TextView
            android:id="@+id/tv_about_weather_after_tomorrow"
            style="@style/item_specificity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            tools:text="Clear" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_temp_after_tomorrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/gl_middle"
        app:layout_constraintTop_toBottomOf="@+id/ll_weather_tomorrow">

        <TextView
            android:id="@+id/rv_after_tomorrow_temp_max"
            style="@style/item_specificity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="28" />

        <TextView
            android:id="@+id/rv_slash_after_tomorrow"
            style="@style/item_specificity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash" />

        <TextView
            android:id="@+id/rv_after_tomorrow_temp_min"
            style="@style/item_specificity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="8" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>